# cnn-occlusion-robustness

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/eval/: matrix.yaml
scripts/: organize_test_set.py  run_all.sh  tune.py
src/cnn_occlusion_robustness/: build_eval_matrix.py  eval.py  train.py
src/cnn_occlusion_robustness/analysis/: advanced_analysis_report.py  plot_training_curves.py  visualize_activations.py  visualize_effects.py  visualize_filters.py
src/cnn_occlusion_robustness/data/: gtsrb.py
src/cnn_occlusion_robustness/models/: factory.py  simple_cnn.py
tests/: test_cli.py  test_data.py  test_model.py  test_train_eval.py
